# fish-and-plants

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
docs/: CODEOWNERS  (+1 more)
src/modules/folder-provider/: CMakeLists.txt
src/modules/folder-provider/include/folder-provider/: folder-provider.hpp
src/modules/folder-provider/src/: folder-provider-impl.cpp  folder-provider-impl.hpp  folder-provider.cpp
src/modules/project-management/: CMakeLists.txt
src/modules/project-management/include/project-management/: project.hpp
src/modules/project-management/src/: temp.cpp
src/modules/project-management/src/integrity-check/: title-integrity-checker.cpp  version-integrity-checker.cpp
src/modules/project-management/src/project-io/: json-project-reader.cpp  json-project-reader.hpp  json-project-writer.cpp  json-project-writer.hpp  project-reader.cpp  project-writer.cpp
src/modules/workflows/: CMakeLists.txt
src/modules/workflows/src/: workflow-loop.cpp  workflow.cpp
src/rpi_gc/: CMakeLists.txt  application-configuration.hpp  commands-factory.cpp  commands-factory.hpp  entry-point.cpp  greenhouse-controller-application.cpp  greenhouse-controller-application.hpp  initial-project-loader.cpp  initial-project-loader.hpp  project-loader.cpp  project-loader.hpp  rpi_gc-config-file.hpp
src/rpi_gc/abort-system/: emergency-stoppable-system.hpp  terminable-system.hpp
src/rpi_gc/application/: application.hpp  rpi-gc-application.hpp
src/rpi_gc/automatic-watering/: automatic-watering-system.cpp  automatic-watering-system.hpp  daily-cycle-automatic-watering-system.cpp  daily-cycle-automatic-watering-system.hpp
src/rpi_gc/automatic-watering/hardware-controllers/: daily-cycle-aws-hardware-controller.cpp  daily-cycle-aws-hardware-controller.hpp  watering-system-hardware-controller.hpp
src/rpi_gc/automatic-watering/time-providers/: configurable-daily-cycle-aws-time-provider.cpp  configurable-daily-cycle-aws-time-provider.hpp  daily-cycle-aws-time-provider.hpp  watering-system-time-provider.hpp
src/rpi_gc/commands/: abort-command.cpp  abort-command.hpp  application-command.cpp  application-command.hpp  application-help-command.cpp  application-help-command.hpp  bivalent-command.hpp  command-event-handler.hpp  command.hpp  help-command.cpp  help-command.hpp  project-command.cpp  project-command.hpp  status-command.cpp  status-command.hpp  terminal-command.hpp  version-command.cpp  version-command.hpp
src/rpi_gc/commands/automatic-watering/: automatic-watering-command.cpp  automatic-watering-command.hpp
src/rpi_gc/common/: types.hpp
src/rpi_gc/diagnostics/: diagnostic-status-probeable.hpp
src/rpi_gc/gc-project/: project-component.hpp  project-controller.cpp  project-controller.hpp
src/rpi_gc/gc-project/upgraders/: project-upgraders.cpp  project-upgraders.hpp
src/rpi_gc/hardware-management/: hardware-chip-initializer.hpp
src/rpi_gc/user-interface/: application-strings.hpp  commands-strings.hpp
src/rpi_gc/version/: version-numbers.hpp  version-numbers.hpp.in
src/wrappers/gh_cmd/: CMakeLists.txt  gh_cmd.hpp
src/wrappers/gh_hal/: CMakeLists.txt  hal-board-pin.cpp  hal-board-pin.hpp  hal-context.cpp  hal-context.hpp  hal-definitions.hpp  hal-digital-output.hpp  hal-error.hpp  hardware-abstraction-layer.cpp  hardware-abstraction-layer.hpp
src/wrappers/gh_hal/hardware-access/: board-chip.cpp  board-chip.hpp  board-digital-pin.hpp
src/wrappers/gh_hal/hardware-controllers/: hardware-controller.hpp
src/wrappers/gh_hal/internal/: board-chip-impl.cpp  board-chip-impl.hpp  board-digital-pin-impl.cpp  board-digital-pin-impl.hpp  line-request.cpp  line-request.hpp
src/wrappers/gh_log/: CMakeLists.txt  gh-log-lib-base.hpp  logger.hpp  spl-logger.cpp  spl-logger.hpp
src/wrappers/gh_log/implementation/: automatic-flusher.hpp
test/: CMakeLists.txt  catch2-gmock-listener.cpp  catch2-gmock-listener.hpp  test-app-entry-point.cpp  testing-core.hpp
test/gh_cmd/: default-option-parser.tests.cpp  switch.tests.cpp  value.tests.cpp
test/gh_cmd/test-doubles/: command-option.mock.hpp  option-parser.mock.hpp  option-visitor.mock.hpp
test/gh_hal/: hal-board-pin.tests.cpp  hal-module-tests.cpp
test/gh_hal/hardware-access/: board-chip.tests.cpp
test/gh_hal/test-doubles/: hal-context.mock.hpp  hal-digital-output.mock.hpp
test/gh_hal/test-doubles/hardware-access/: board-chip-factory.mock.hpp  board-chip.mock.hpp  board-digital-pin.mock.hpp
test/gh_log/test-doubles/: logger.mock.hpp
test/integration/: automatic-watering-system-project-loading.tests.cpp  automatic-watering-system-project-saving.tests.cpp
test/integration/rpi_gc/: application-command-integration.tests.cpp
test/modules/folder-provider/: folder-provider.mock.hpp
test/modules/project-management/: project.tests.cpp  title-integrity-checker.tests.cpp  version-integrity-checker.tests.cpp
test/modules/project-management/project-io/: json-project-reader.tests.cpp  json-project-writer.tests.cpp  project-reader.tests.cpp
test/rpi_gc/: greenhouse-controller-application.tests.cpp
test/rpi_gc/automatic-watering/: daily-cycle-automatic-watering-system.tests.cpp
test/rpi_gc/automatic-watering/hardware-controllers/: daily-cycle-aws-hardware-controller.tests.cpp
test/rpi_gc/commands/: abort-command.tests.cpp  application-command.tests.cpp  automatic-watering-command.tests.cpp  project-command.tests.cpp  status-command.tests.cpp  version-command.tests.cpp
test/rpi_gc/functional/: aws-hardware-controller-interactions.tests.cpp
test/rpi_gc/gc-project/: project-config-loader.tests.cpp  project-controller.tests.cpp
test/rpi_gc/hardware-management/: hardware-initializer.tests.cpp
test/rpi_gc/test-doubles/abort-system/: emergency-stoppable-system.mock.hpp  terminable-system.mock.hpp
test/rpi_gc/test-doubles/commands/: bivalent-command.mock.hpp  terminal-command.mock.hpp
test/rpi_gc/test-doubles/diagnostics/: diagnostic-status-probeable.mock.hpp
test/rpi_gc/test-doubles/gc-project/: project-component.mock.hpp
(+61 files in other folders)
